// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkLogo renders without error 1`] = `
<View
  overflow="hidden"
  style={
    {
      "borderColor": "#000000",
      "borderRadius": 6,
      "borderWidth": 0,
      "height": 20,
      "width": 20,
    }
  }
  testID="network-logo"
  zIndex={10}
>
  <View
    height={20}
    resizeMode="contain"
    source="mock-asset-BASE_LOGO.png"
    width={20}
  />
</View>
`;

exports[`TransactionSummaryNetworkLogo renders without error 1`] = `
<View
  overflow="hidden"
  style={
    {
      "borderColor": "#000000",
      "borderRadius": 6.8999999999999995,
      "borderWidth": 1.5,
      "height": 23,
      "width": 23,
    }
  }
  testID="network-logo"
  zIndex={10}
>
  <View
    height={20}
    resizeMode="contain"
    source="mock-asset-BASE_LOGO.png"
    width={20}
  />
</View>
`;
